Change email icon for visibility issue

--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ img{
 }
 
 #music{
-    background-image: url(./icon/music-note.png);
+    background-image: url(./icon/musical-note.png);
     background-repeat: no-repeat;
     background-size: 30% 20%;
     background-position: right 25% top 15%;
